# MTM

./: CMakeLists.txt  Rect.h  ResultMonitor.cpp  ResultMonitor.h  TaskConfig.h  TrajectoriesRefiner.cpp  TrajectoriesRefiner.h  main.cpp
Tracker/: ITrackerWrapper.h
Tracker/CT/: CMakeLists.txt  CompressiveTracker.cpp  CompressiveTracker.h  CtWrapper.cpp  CtWrapper.h
Tracker/DSST/: CMakeLists.txt
Tracker/DSST/include/: DsstWrapper.h  cv_ext.hpp  dsst_tracker.hpp  feature_channels.hpp  scale_estimator.hpp
Tracker/DSST/src/: DsstWrapper.cpp
Tracker/KCF/: CMakeLists.txt  KcfWrapper.cpp  KcfWrapper.h  kcftracker.cpp  kcftracker.hpp  tracker.h
Tracker/SOWP/: Config.cpp  Config.h  Main.cpp  Rect.cpp  Rect.h  SowpWrapper.cpp  SowpWrapper.h  StructuredSVM.cpp  StructuredSVM.h  Tracker.cpp  Tracker.h
Tracker/Struck/: CMakeLists.txt  Features.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  Sampler.cpp  StruckWrapper.cpp  StruckWrapper.h  Tracker.cpp  Tracker.h  config.txt
Tracker/Struck/GraphUtils/: GraphUtils.cpp
